--- a/style.css
+++ b/style.css
@@ -7,32 +7,52 @@
     padding: 5px;
 }
 body{
-    background-color: rgb(230, 230, 230);
+    background-color: rgb(180, 180, 180);
 }
 header{
-    background-color: rgba(166, 224, 255, 0.627);
-    box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
+    background-color: rgb(220, 220, 220);
+    box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.6);
     margin: 10;
-}
-a{
-    margin: 0;
-    padding: 0;
 }
 div{
     background-color: aliceblue;
-    box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.25);
+    box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.6);
 }
 img{
     width: 15%;
     height: 15%;
     border-radius: 5px;
     padding: 0;
-    box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.25);
+    box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.6);
 }
 .index{
     display: inline-flex;
 }
-.url{
-    position: absolute;
+#hobby{
+    border: 1px solid rgb(110, 110, 110);
     
+}
+ul{
+    list-style: none;
+    padding: 0;
+}
+li{
+    margin: 5px;
+    padding: 0;
+    border-radius: 0;
+    border-bottom: 1px solid rgb(110, 110, 110);
+}
+.link{
+    text-align: center;
+    padding-block: 10px;
+}
+a{
+    color: rgb(110, 110, 110);
+    text-decoration: none;
+    border: 1px solid rgb(110, 110, 110);
+}
+a:hover{
+    color: #fff;
+    background-color: rgb(110, 110, 110);
+    transition: all 0.4s;
 }
