--- a/style.css
+++ b/style.css
@@ -19,18 +19,31 @@ div{
     box-shadow: 4px 4px 14px rgba(0, 0, 0, 0.6);
 }
 img{
-    width: 15%;
-    height: 15%;
+    width: 250px;
+    height: 300px;
     border-radius: 5px;
     padding: 0;
     box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.6);
 }
 .index{
-    display: inline-flex;
+    display: flex;
 }
 #hobby{
     border: 1px solid rgb(110, 110, 110);
-    
+    background-color: rgb(222, 222, 222);
+    width: 50%;
+}
+@media (max-width: 500px){
+    .index{
+        display: block;
+    }
+    img{
+        width: 150px;
+        height: 200px;
+    }
+    #hobby{
+        width: 90%;
+    }
 }
 ul{
     list-style: none;
